[package]
name = "asteroids"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
# Bevy game engine
bevy = "0.8.1"
# Simple 2d collision detection for bevy
sepax2d = "0.3"
# Draw 2d shapes and paths with bevy
bevy_prototype_lyon = "0.6"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
