[package]
name = "asteroids"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
# Simple 2d collision detection for bevy
sepax2d = "0.3"
# Draw 2d shapes and paths with bevy
bevy_prototype_lyon = "0.8"

[dependencies.bevy]
version = "0.10"
# Disable the default features if there are any that you do not want
default-features = false
features = [
  ## Bevy functionality:
  "bevy_asset",           # Assets management
  "bevy_gilrs",           # Gamepad input support
  "bevy_winit",           # Window management
  "x11",                  # Linux: Support X11 windowing system
  # "bevy_scene",         # Scenes management
  # "bevy_audio",         # Builtin audio
  # "animation",          # Animation support
  # "filesystem_watcher", # Asset hot-reloading
  # "render",             # Graphics Rendering

  ## "render" actually just includes:
  ## (feel free to use just a subset of these, instead of "render")
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_text",          # Text/font rendering
  "bevy_ui",            # UI toolkit
  # "bevy_sprite",      # 2D (sprites) rendering
  # "bevy_pbr",         # 3D (physically-based) rendering
  # "bevy_gltf",        # GLTF 3D assets format support
  
  ## File formats:
  # "png",
  # "hdr",
  # "vorbis",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
